# SPDX-License-Identifier: BSD-3-Clause
# Copyright 2018 NXP

if is_windows
    subdir_done()
endif

drivers = [
        'afu_mf',
        'cnxk_bphy',
        'cnxk_gpio',
        'dpaa2_cmdif',
        'dpaa2_qdma',
        'ifpga',
        'ioat',
        'ntb',
        'skeleton',
]
std_deps = ['rawdev']
